--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     </head>
     <body>
 
-        <h1>Hello!</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-2">
+                    <div class="fs-1">Hello</div>
+                </div>
+            </div>
+        </div>
 
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/jquery-3.6.4.min.js"></script>
