--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-2">
-                    <div class="fs-1">Hello</div>
+                    <div class="fs-1" style="border: 1px solid red;">Hello</div>
                 </div>
             </div>
         </div>
